--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             </div>
         </div>
 
-        <p class="footer__copy">&#169; 2020 Nk Clovis. All </p>
+        <p class="footer__copy">&#169; 2020 Nk Clovis. All Rights Reserved</p>
     </footer>
 
 
